Feign Client configuration refactoring
* Refactoring the Feign client
* Removing deprecated methods
* Adding custom exception handling
* Including support for environmental variables